--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,5 +11,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    - name: Mark `gradlew` as executable
+      run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
