--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,7 @@ imgui.ini
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
 
 characterization-project/
+
+# Match videos
+*.mp4
+*.mkv
